[package]
name = "caching-proxy-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"]}
serde = { version = "1.0.130", features = ["derive"] }
actix = "0.13.5"
actix-web = "4.0.0-beta.8"
tokio = { version = "1.0.1", features = ["full"] }
reqwest = "0.12.15"
lazy_static = "1.4.0"